--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,24 +1,31 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.model.application'
 
-android {
-    compileSdkVersion 23
-    buildToolsVersion '23.0.1'
+model {
+    android {
+        compileSdkVersion 23
+        buildToolsVersion '23.0.3'
 
-    defaultConfig {
-        applicationId "org.yegie.keenforandroid"
-        minSdkVersion 19
-        targetSdkVersion 19
-        versionCode 1
-        versionName "1.0"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        defaultConfig {
+            applicationId "org.yegie.keenforandroid"
+            minSdkVersion.apiLevel 22
+            targetSdkVersion.apiLevel 23
+            versionCode 1
+            versionName "1.0"
+        }
+
+        buildTypes {
+            release {
+                minifyEnabled false
+                proguardFiles.add(file("proguard-rules.pro"))
+            }
+        }
+
+        // New code
+        ndk {
+            moduleName "keen-android-jni"
         }
     }
 }
-
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
