--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,34 +1,45 @@
-apply plugin: 'com.android.model.application'
+apply plugin: 'com.android.application'
 
-model {
-    android {
-        compileSdkVersion 23
-        buildToolsVersion '23.0.3'
-
-        defaultConfig {
-            applicationId "org.yegie.keenforandroid"
-            minSdkVersion.apiLevel 22
-            targetSdkVersion.apiLevel 23
-            versionCode 12
-            versionName "1.2"
-        }
-
-        buildTypes {
-            release {
-                minifyEnabled false
-                proguardFiles.add(file("proguard-rules.pro"))
+android {
+    compileSdkVersion 26
+    defaultConfig {
+        applicationId "org.yegie.keenforandroid"
+        minSdkVersion 22
+        targetSdkVersion 26
+        versionCode 12
+        versionName "1.2"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        externalNativeBuild {
+            cmake {
+                cppFlags ""
             }
         }
+    }
 
-        // New code
-        ndk {
-            moduleName "keen-android-jni"
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    externalNativeBuild {
+        cmake {
+            path "CMakeLists.txt"
+        }
+    }
+
+    // ndk {
+    //     moduleName "keen-android-jni"
+    // }
 }
+
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.+'
-    compile 'com.google.code.gson:gson:2.3.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.google.code.gson:gson:2.8.0'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
