Fixed a state loss bug
The default state of "continuing" is "false" and if the activity is
started directly by the system without the menu that is what it is going
to be -- false. Storing it in the saved instance state now.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         >
         <activity android:name="org.yegie.keenforandroid.MenuActivity"
-                  android:screenOrientation="userPortrait">
+                  android:screenOrientation="userPortrait"
+                  android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
