--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-*.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/tasks.xml
-/.idea/libraries
-.DS_Store
 /build
 /captures
+.DS_Store
+.gradle
+/.idea/caches/
+/.idea/codeStyles/
+/.idea/libraries
+/.idea/tasks.xml
+/.idea/workspace.xml
+*.iml
+/local.properties
